--- a/examples.html
+++ b/examples.html
@@ -16,12 +16,19 @@
     <link rel="stylesheet" href="./style.css" />
     <title>Examples</title>
   </head>
-  <body>
+  <body
+    style="
+      background-image: url(./image/backgraound/other.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      height: fit-content;
+      width: 100%;
+    "
+  >
     <div class="container mt-5">
       <!-- <h1>نمونه کارها</h1> -->
       <nav>
         <div class="nav nav-tabs" id="nav-tab" role="tablist">
-
           <!-- all  -->
           <button
             class="nav-link active text-black hover"
@@ -38,7 +45,7 @@
 
           <!-- company -->
           <button
-            class="nav-link  text-black hover"
+            class="nav-link text-black hover"
             id="nav-profile-tab"
             data-bs-toggle="tab"
             data-bs-target="#nav-profile"
@@ -67,14 +74,14 @@
       </nav>
 
       <!-- tabs content -->
-      <div class="tab-content" id="nav-tabContent">
+      <div class="tab-content" id="nav-tabContent" >
         <div
           class="tab-pane fade show active"
           id="nav-home"
           role="tabpanel"
           aria-labelledby="nav-home-tab"
         >
-          <div class="card border-0" style="width: 100%">
+          <div class="card border-0" style="width: 100%;background: none;">
             <div class="row justify-content-between w-100 h-100">
               <div class="col-lg-3 col-md-4 rounded-1 mt-4">
                 <a href=""
@@ -125,7 +132,7 @@
           role="tabpanel"
           aria-labelledby="nav-profile-tab"
         >
-          <div class="card border-0" style="width: 100%">
+          <div class="card border-0" style="width: 100%;background: none;">
             <div class="row justify-content-between w-100 h-100">
               <div class="col-lg-3 col-md-4 rounded-1 mt-4">
                 <a href=""
@@ -176,7 +183,7 @@
           role="tabpanel"
           aria-labelledby="nav-contact-tab"
         >
-          <div class="card border-0" style="width: 100%">
+          <div class="card border-0" style="width: 100%;background: none;">
             <div class="row justify-content-between w-100 h-100">
               <div class="col-lg-3 col-md-4 rounded-1 mt-4">
                 <a href=""
@@ -222,9 +229,42 @@
           </div>
         </div>
       </div>
-   
     </div>
-
+<section>
+  <div style="margin: 8rem 0;">
+    <div class="d-flex justify-content-center">
+      <div
+        style="
+          width:100%;
+          height: 170px;
+          background: #464646ba;
+          box-shadow: 0px 0px 35px -20px black;
+          padding: 10px;
+          margin-bottom: 3rem;
+        "
+        class="d-flex flex-column align-items-center"
+      >
+        <h5 class="mt-4 text-center text-white">
+          نیاز به مشاوره رایگان و آنلاین دارید؟
+        </h5>
+        <button
+          class="mt-sm-4"
+          style="
+            width: fit-content;
+            border: none;
+            border-radius: 5px;
+            background-color: #009fd1;
+            font-size: 14px;
+            color: #ffffff;
+            padding: 10px 15px;
+          "
+        >
+          درخواست مشاوره
+        </button>
+      </div>
+    </div>
+  </div>
+</section>
     <script src="./script/bootstrap.bundle.min.js"></script>
   </body>
 </html>
