--- a/about.html
+++ b/about.html
@@ -51,16 +51,29 @@
   >
     <section style="margin: 7rem 0">
       <div class="container">
+        <div class="d-flex justify-content-center" style="margin-bottom: 4rem;">
+          <h3
+            class="text-center mb-5 pb-3"
+            style="
+              color: #000000;
+              width: max-content;
+              border-bottom: 3px solid #009FD1;
+              padding: 0 30px;
+            "
+          >
+           درباره ما
+          </h3>
+        </div>
         <div class="row">
           <div class="col-lg-6">
             <img
-              class="img-fluid w-100"
+              class="img-fluid w-100 rounded-2"
               src="./image/about us/campaign-creators-gMsnXqILjp4-unsplash.jpg"
               alt=""
             />
           </div>
           <div class="col-lg-6">
-            <h2 style="color: #017496">به دیجیتال مارکتینگ لبخند بزنید!</h2>
+            <h2 style="color: #009FD1; margin-bottom: 1.5rem;">به دیجیتال مارکتینگ لبخند بزنید!</h2>
             <p>
               خوشحالیم که مانند خانواده در کنار شما برای رشد کسب و کارتان هستیم
               و از تمام چالش هایی که برای بهبود ایجاد می شوند، استقبال می کنیم.
@@ -129,9 +142,10 @@
           <h3
             class="text-center mb-5 pb-3"
             style="
-              color: #017496;
+              color: #000000;
               width: max-content;
-              border-bottom: 3px solid #017496;
+              border-bottom: 3px solid #009FD1;
+              padding: 0 30px;
             "
           >
             با نگارینه بیشتر آشنا شوید
@@ -227,9 +241,10 @@
           <h3
             class="text-center mb-5 pb-3"
             style="
-              color: #017496;
+              color: #000000;
               width: max-content;
-              border-bottom: 3px solid #017496;
+              border-bottom: 3px solid #009FD1;
+              padding: 0 30px;
             "
           >
             اهداف و چشم اندازها
