--- a/contact.html
+++ b/contact.html
@@ -15,14 +15,14 @@
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./css/examples.css" />
     <link rel="stylesheet" href="./leaflet/leaflet.css" />
-    <title>Price</title>
+    <title>Contact Us</title>
     <style>
       .contact-info:hover {
         background-color: #9dd0e1;
         transition: 0.6s;
         transform: scale(1.2);
       }
-      .contant-button:hover{
+      .contant-button:hover {
         background-color: #9694949d !important;
         transition: 0.6s;
         transform: scale(1.2);
@@ -224,35 +224,59 @@
           <div class="col-lg-5 d-flex order-2 order-lg-1 mt-5 mt-lg-0">
             <div class="d-flex flex-column justify-content-center w-100">
               <h1 class="mb-5">دفتر مرکزی</h1>
-              <div class="d-flex align-items-center mb-4">
+              <div class="d-flex align-items-center mb-5">
                 <i
                   style="color: #009fd1; font-size: 25px"
                   class="bi bi-geo-alt-fill"
                 ></i>
                 <p class="m-0 fs-4 me-1">تهران، میرداماد</p>
               </div>
-              <div class="d-flex flex-wrap justify-content-between">
-                <div class="d-flex align-items-center mb-3">
-                  <i
-                    style="color: #009fd1; font-size: 25px"
-                    class="bi bi-envelope-at-fill"
-                  ></i>
+              <div class="d-flex d-lg-block flex-wrap justify-content-between">
+                <div class="d-flex align-items-center justify-content-end mb-3">
                   <a
-                    style="font-size: 18px; color: black; margin-right: 5px"
+                    style="font-size: 14px; color: black; margin-left: 5px"
                     href=""
                     >support@email.com</a
                   >
-                </div>
-                <div class="d-flex align-items-center mb-3">
                   <i
-                    style="color: #009fd1; font-size: 25px"
-                    class="bi bi-chat-dots-fill"
+                    style="color: #009fd1; font-size: 20px"
+                    class="bi bi-envelope-at-fill"
                   ></i>
+                </div>
+                <div class="d-flex align-items-center justify-content-end mb-3">
                   <a
-                    style="font-size: 18px; color: black; margin-right: 5px"
+                    style="font-size: 14px; color: black; margin-left: 5px"
                     href=""
                     >chat_whatapp@</a
                   >
+                  <i
+                    style="color: #009fd1; font-size: 20px"
+                    class="bi bi-chat-dots-fill"
+                  ></i>
+                </div>
+              </div>
+              <div class="d-flex d-lg-block flex-wrap justify-content-between">
+                <div class="d-flex align-items-center justify-content-end mb-3">
+                  <a
+                    style="font-size: 14px; color: black; margin-left: 5px"
+                    href=""
+                    >negarineh@
+                  </a>
+                  <i
+                    style="color: #009fd1; font-size: 20px"
+                    class="bi bi-instagram"
+                  ></i>
+                </div>
+                <div class="d-flex align-items-center justify-content-end mb-3">
+                  <a
+                    style="font-size: 14px; color: black; margin-left: 5px"
+                    href=""
+                    >negarineh@
+                  </a>
+                  <i
+                    style="color: #009fd1; font-size: 20px"
+                    class="bi bi-linkedin"
+                  ></i>
                 </div>
               </div>
             </div>
@@ -264,11 +288,11 @@
       </div>
     </section>
     <section>
-      <div style="margin: 8rem 0;">
+      <div style="margin: 8rem 0">
         <div class="d-flex justify-content-center">
           <div
             style="
-              width:100%;
+              width: 100%;
               height: 170px;
               background: #464646ba;
               box-shadow: 0px 0px 35px -20px black;
