--- a/examples.html
+++ b/examples.html
@@ -26,7 +26,19 @@
     "
   >
     <div class="container mt-5">
-      <!-- <h1>نمونه کارها</h1> -->
+      <div class="d-flex justify-content-center" style="margin-bottom: 4rem;">
+        <h3
+          class="text-center mb-5 pb-3"
+          style="
+            color: #000000;
+            width: max-content;
+            border-bottom: 3px solid #017496;
+            padding: 0 30px;
+          "
+        >
+         نمونه کارها
+        </h3>
+      </div>
       <nav>
         <div class="nav nav-tabs" id="nav-tab" role="tablist">
           <!-- all  -->
