--- a/about.html
+++ b/about.html
@@ -39,6 +39,12 @@
         transition: 0.6s;
         transform: scale(1.2);
       }
+      @media screen and (min-width: 1024px) {
+  .project-manager {
+    max-height: 220px !important;
+    justify-content: space-between !important;
+  }
+}
   </style>
   <body
     style="
@@ -49,9 +55,9 @@
       width: 100%;
     "
   >
-    <section style="margin: 7rem 0">
+    <section style="margin: 4rem 0">
       <div class="container">
-        <div class="d-flex justify-content-center" style="margin-bottom: 4rem;">
+        <div class="d-flex justify-content-center" style="margin-bottom: 2rem;">
           <h3
             class="text-center mb-5 pb-3"
             style="
@@ -73,7 +79,7 @@
             />
           </div>
           <div class="col-lg-6">
-            <h2 style="color: #009FD1; margin-bottom: 1.5rem;">به دیجیتال مارکتینگ لبخند بزنید!</h2>
+            <h2 style="color: #009FD1; margin-bottom: 1.5rem;" class="mt-4 mt-lg-0">به دیجیتال مارکتینگ لبخند بزنید!</h2>
             <p>
               خوشحالیم که مانند خانواده در کنار شما برای رشد کسب و کارتان هستیم
               و از تمام چالش هایی که برای بهبود ایجاد می شوند، استقبال می کنیم.
@@ -136,7 +142,7 @@
         </div>
       </div>
     </section>
-    <section style="margin: 7rem 0">
+    <section>
       <div class="container my-5">
         <div class="d-flex justify-content-center">
           <h3
@@ -153,18 +159,18 @@
         </div>
         <div class="d-flex justify-content-center">
           <div
-            class="card justify-content-center mb-3"
+            class="card w-100 justify-content-center mb-3"
             style="max-width: 400px; height: 200px; overflow: hidden"
           >
-            <div class="row g-0">
-              <div class="col-md-5">
+            <div class="row h-100 g-0">
+              <div class="col-5">
                 <img
                   src="./image/about us/ali-morshedlou-WMD64tMfc4k-unsplash.jpg"
                   class="img-fluid rounded-end w-100 h-100"
                   alt="..."
                 />
               </div>
-              <div class="col-md-7">
+              <div class="col-7">
                 <div class="card-body p-0" style="background-color: #2a2a2a">
                   <div
                     class="d-flex flex-column justify-content-center align-items-center h-100"
@@ -177,20 +183,21 @@
             </div>
           </div>
         </div>
-        <div class="d-flex justify-content-between mt-5 w-75 m-auto">
+        <div>
+        <div class="row h-100 justify-content-center mt-5 m-auto Project-Manager" style="max-height: 400px;">
           <div
-            class="card justify-content-center mb-3"
+            class="col-lg-6 p-0 card justify-content-center mb-3"
             style="max-width: 400px; height: 200px; overflow: hidden"
           >
-            <div class="row g-0">
-              <div class="col-md-5">
+            <div class="row h-100 g-0">
+              <div class="col-5">
                 <img
                   src="./image/about us/christina-wocintechchat-com-0Zx1bDv5BNY-unsplash.jpg"
                   class="img-fluid rounded-end w-100 h-100"
                   alt="..."
                 />
               </div>
-              <div class="col-md-7">
+              <div class="col-7">
                 <div class="card-body p-0" style="background-color: #2a2a2a">
                   <div
                     class="d-flex flex-column justify-content-center align-items-center h-100"
@@ -206,18 +213,18 @@
           </div>
 
           <div
-            class="card justify-content-center mb-3"
+            class="col-lg-6 p-0 card justify-content-center mb-3"
             style="max-width: 400px; height: 200px; overflow: hidden"
           >
-            <div class="row g-0">
-              <div class="col-md-5">
+            <div class="row h-100 g-0">
+              <div class="col-5">
                 <img
                   src="./image/about us/christina-wocintechchat-com-0Zx1bDv5BNY-unsplash.jpg"
                   class="img-fluid rounded-end w-100 h-100"
                   alt="..."
                 />
               </div>
-              <div class="col-md-7">
+              <div class="col-7">
                 <div class="card-body p-0" style="background-color: #2a2a2a">
                   <div
                     class="d-flex flex-column justify-content-center align-items-center h-100"
