example final changes

--- a/examples.html
+++ b/examples.html
@@ -93,7 +93,7 @@
           role="tabpanel"
           aria-labelledby="nav-home-tab"
         >
-          <div class="card border-0" style="width: 100%;background: none;">
+          <div class="card border-0 align-items-center" style="width: 100%;background: none;">
             <div class="row justify-content-between w-100 h-100">
               <div class="col-lg-3 col-md-4 rounded-1 mt-4">
                 <a href=""
@@ -144,7 +144,7 @@
           role="tabpanel"
           aria-labelledby="nav-profile-tab"
         >
-          <div class="card border-0" style="width: 100%;background: none;">
+          <div class="card border-0 align-items-center" style="width: 100%;background: none;">
             <div class="row justify-content-between w-100 h-100">
               <div class="col-lg-3 col-md-4 rounded-1 mt-4">
                 <a href=""
@@ -195,7 +195,7 @@
           role="tabpanel"
           aria-labelledby="nav-contact-tab"
         >
-          <div class="card border-0" style="width: 100%;background: none;">
+          <div class="card border-0 align-items-center" style="width: 100%;background: none;">
             <div class="row justify-content-between w-100 h-100">
               <div class="col-lg-3 col-md-4 rounded-1 mt-4">
                 <a href=""
